--- a/vert.x/.settings/org.eclipse.jdt.core.prefs
+++ b/vert.x/.settings/org.eclipse.jdt.core.prefs
@@ -1,16 +1,20 @@
-#Sat Feb 20 18:50:58 EST 2016
-encoding//src/main/java=UTF-8
-org.eclipse.jdt.core.compiler.debug.localVariable=generate
+#Fri Mar 25 21:13:09 GMT 2016
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
-encoding//src/main/resources=UTF-8
-encoding//src/test/resources=UTF-8
-encoding//src/test/java=UTF-8
-org.eclipse.jdt.core.compiler.debug.sourceFile=generate
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.debug.lineNumber=generate
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.source=1.8
+encoding/src/test/java=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
+eclipse.preferences.version=1
+encoding/src/test/resources=UTF-8
+encoding/src/main/resources=UTF-8
+org.eclipse.jdt.core.compiler.debug.localVariable=generate
+encoding/src/main/java=UTF-8
+encoding//src/main/java=UTF-8
+org.eclipse.jdt.core.compiler.debug.sourceFile=generate
+encoding//src/main/resources=UTF-8
+org.eclipse.jdt.core.compiler.debug.lineNumber=generate
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
+org.eclipse.jdt.core.compiler.source=1.8
