--- a/siws/pom.xml
+++ b/siws/pom.xml
@@ -124,5 +124,15 @@
 			<artifactId>vertx-core</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
