--- a/cs/pom.xml
+++ b/cs/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.onlineinteract</groupId>
-	<artifactId>siws</artifactId>
+	<artifactId>cs</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>siws</name>
+	<name>cs</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -88,6 +88,22 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>com.onlineinteract.application.CSApplication</mainClass>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -134,5 +150,13 @@
 			<artifactId>morphia</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-moxy</artifactId>
+		</dependency>
+<!-- 		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+		</dependency> -->
 	</dependencies>
 </project>
